--- a/BlogAuthentication/BlogAuthentication.csproj
+++ b/BlogAuthentication/BlogAuthentication.csproj
@@ -196,12 +196,27 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BlogPostController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702101747570_Initial.cs" />
+    <Compile Include="Migrations\201702101747570_Initial.Designer.cs">
+      <DependentUpon>201702101747570_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702101949372_AddedOwnerField.cs" />
+    <Compile Include="Migrations\201702101949372_AddedOwnerField.Designer.cs">
+      <DependentUpon>201702101949372_AddedOwnerField.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702102114025_DoesThisHelp.cs" />
+    <Compile Include="Migrations\201702102114025_DoesThisHelp.Designer.cs">
+      <DependentUpon>201702102114025_DoesThisHelp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -287,6 +302,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\BlogPost\Create.cshtml" />
+    <Content Include="Views\BlogPost\Delete.cshtml" />
+    <Content Include="Views\BlogPost\Details.cshtml" />
+    <Content Include="Views\BlogPost\Edit.cshtml" />
+    <Content Include="Views\BlogPost\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -298,6 +318,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702101747570_Initial.resx">
+      <DependentUpon>201702101747570_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702101949372_AddedOwnerField.resx">
+      <DependentUpon>201702101949372_AddedOwnerField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702102114025_DoesThisHelp.resx">
+      <DependentUpon>201702102114025_DoesThisHelp.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
