--- a/BlogAuthentication/BlogAuthentication.csproj
+++ b/BlogAuthentication/BlogAuthentication.csproj
@@ -307,6 +307,7 @@
     <Content Include="Views\BlogPost\Details.cshtml" />
     <Content Include="Views\BlogPost\Edit.cshtml" />
     <Content Include="Views\BlogPost\Index.cshtml" />
+    <Content Include="Views\BlogPost\MyPosts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
